# openmind-esp32-bridge

./: AGENT.md  Cargo.toml  README.md
src/: conductor.rs  framing.rs  lib.rs  registry.rs  serial.rs  transport.rs  types.rs  websocket.rs
