[package]
name = "openmind-esp32-bridge"
version = "0.1.0"
description = "Motor neuron bridge between the openmind muscle memory system and ESP32 hardware"
repository = "https://github.com/SuperInstance/openmind-esp32-bridge"
edition = "2021"
license = "MIT"

[features]
default = ["serial", "ws"]
serial = []
ws = []

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tokio-tungstenite = "0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crc = "3"
thiserror = "2"
futures-util = "0.3"
async-trait = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util", "macros"] }
